fix bleeding styles

--- a/src/components/activity-listing/ActivityListing.module.css
+++ b/src/components/activity-listing/ActivityListing.module.css
@@ -21,6 +21,7 @@
 }
 
 .listingTitle h2 {
+  text-align: left;
   font-size: 24px;
   font-weight: 500;
   margin-bottom: 15px;
